[package]
name = "kosmos"
version = "0.1.1"
authors = ["Kramer Hampton <me@kramerhampton.dev>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/hamptokr/kosmos"
repository = "https://github.com/hamptokr/kosmos"
description = "A client library for apis of the cosmos"
keywords = ["cosmos", "space", "universe", "earth"]
categories = ["web-programming::http-client"]
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/kosmos"

[features]
default = ["nasa"]

nasa = []


[dependencies]
async-trait = "0.1.41"
chrono = { version = "0.4.16", features = ["serde"] }
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.3"
snafu = "0.6.9"
tokio = { version = "0.2", features = ["full"] }
url = { version = "2.1.1", features = ["serde"] }