[package]
name = "kosmos"
version = "0.1.1"
authors = ["Kramer Hampton <me@kramerhampton.dev>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/hamptokr/kosmos"
repository = "https://github.com/hamptokr/kosmos"
description = "A client library for apis of the cosmos"
keywords = ["cosmos", "space", "universe", "earth"]
categories = ["web-programming::http-client"]
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/kosmos"

[features]
default = ["nasa"]
nasa = []

[dependencies]
chrono = { version = "^0.4.16", features = ["serde"] }
reqwest = { version = "^0.11.0", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "*"
serde_path_to_error = "^0.1.3"
snafu = "0.6.9"
url = { version = "^2.2.0", features = ["serde"] }